--- a/index.html
+++ b/index.html
@@ -53,27 +53,19 @@
     </header>
 
     <!-- SOBRE -->
-    <section class="quem-somos">
-  <h2>Quem Somos</h2>
+    <section class="quem-somos" id="sobre">
+        <h2>Quem Somos</h2>
 
-  <p>Somos uma agência especializada em crescimento estratégico para salões de beleza.</p>
-
-  <p>Nosso propósito é simples: transformar redes sociais em máquinas previsíveis de agendamentos.</p>
-
-  <p>Acreditamos que um salão não deve depender apenas de indicações ou da sorte para ter a agenda cheia.</p>
-
-  <p>Por isso, unimos marketing digital, posicionamento estratégico e execução profissional para gerar resultados reais e consistentes.</p>
-
-  <p><strong>Não fazemos apenas postagens bonitas.</strong></p>
-
-  <p>Criamos estratégias inteligentes que aumentam visibilidade, fortalecem sua autoridade local e atraem as clientes certas — todos os dias.</p>
-
-  <p><strong>Planejamos. Executamos. Analisamos. Otimizamos.</strong></p>
-
-  <p>Cada ação tem um único objetivo: aumentar seus agendamentos e seu faturamento.</p>
-  
-  <p><strong>Se você quer parar de depender de meses bons e ruins e começar a ter crescimento previsível, está no lugar certo.</strong></p>
-</section>
+        <p>Somos uma agência especializada em crescimento estratégico para salões de beleza.</p>
+        <p>Nosso propósito é simples: transformar redes sociais em máquinas previsíveis de agendamentos.</p>
+        <p>Acreditamos que um salão não deve depender apenas de indicações ou da sorte para ter a agenda cheia.</p>
+        <p>Por isso, unimos marketing digital, posicionamento estratégico e execução profissional para gerar resultados reais e consistentes.</p>
+        <p><strong>Não fazemos apenas postagens bonitas.</strong></p>
+        <p>Criamos estratégias inteligentes que aumentam visibilidade, fortalecem sua autoridade local e atraem as clientes certas — todos os dias.</p>
+        <p><strong>Planejamos. Executamos. Analisamos. Otimizamos.</strong></p>
+        <p>Cada ação tem um único objetivo: aumentar seus agendamentos e seu faturamento.</p>
+        <p><strong>Se você quer parar de depender de meses bons e ruins e começar a ter crescimento previsível, está no lugar certo.</strong></p>
+    </section>
 
     <!-- PROCESSO -->
     <section class="processo-servicos" id="processo">
@@ -128,7 +120,6 @@
         </div>
     </section>
 
-
     <!-- CONTATO -->
     <section id="contato" class="cta">
         <div class="container">
@@ -140,31 +131,28 @@
         </div>
     </section>
 
-   <footer class="footer">
-  <div class="footer-container">
-    
-    <div class="footer-info">
-      <h3>Fale Conosco</h3>
-      <p>Email: comercialvisionn@gmail.com</p>
-      <p>Telefone: (31) 99854-3251</p>
-    </div>
+    <!-- FOOTER -->
+    <footer class="footer">
+        <div class="footer-container">
+            <div class="footer-info">
+                <h3>Fale Conosco</h3>
+                <p>Email: comercialvisionn@gmail.com</p>
+                <p>Telefone: (31) 99854-3251</p>
+            </div>
+        </div>
 
-    </div>
+        <div class="footer-copy">
+            © 2026 Seu Site - Todos os direitos reservados.
+        </div>
+    </footer>
 
-  </div>
-
-  <div class="footer-copy">
-    © 2026 Seu Site - Todos os direitos reservados.
-  </div>
-</footer>
-
-<!-- WHATSAPP FLUTUANTE -->
-<a href="https://wa.me/5531998543251"
-   class="whatsapp-float"
-   target="_blank">
-    <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png"
-         alt="WhatsApp">
-</a>
+    <!-- WHATSAPP FLUTUANTE -->
+    <a href="https://wa.me/5531998543251"
+       class="whatsapp-float"
+       target="_blank">
+        <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png"
+             alt="WhatsApp">
+    </a>
 
     <script>
         const toggle = document.getElementById('menu-toggle');
@@ -190,6 +178,7 @@
             overlay.classList.remove('active');
         }
     </script>
-<a href="#" class="back-to-top">↑</a>
+
+    <a href="#" class="back-to-top">↑</a>
 </body>
 </html>
