--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         </div>
 
         <div class="footer-copy">
-            © 2026 Seu Site - Todos os direitos reservados.
+            © 2026 Vision - Todos os direitos reservados.
         </div>
     </footer>
 
